src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Maintenance</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Discarded</fullName>
        </values>
        <values>
            <fullName>Closed%2FDeclined</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Negotiation with Client%2FBroker</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Background %2F Validation</fullName>
        </values>
        <values>
            <fullName>Closed Unsuccessful</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed%2FDeclined</fullName>
        </values>
        <values>
            <fullName>Commercial Quote</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Negotiation with Client%2FBroker</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Non Standard Process Approval</fullName>
        </values>
        <values>
            <fullName>Tender Document</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved by Broker%2FClient</fullName>
        </values>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Closed Discarded</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>In Preparation</fullName>
        </values>
        <values>
            <fullName>In Revision</fullName>
        </values>
        <values>
            <fullName>Negotiation with Client%2FBroker</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Ready for Advising Broker%2FClient</fullName>
        </values>
        <values>
            <fullName>Ready for Finalise Docs</fullName>
        </values>
        <values>
            <fullName>Ready for Negotiation</fullName>
        </values>
        <values>
            <fullName>Rejected from Approval Process</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Client_Broker_Requirements__c</fullName>
        <label>Additional Client/Broker Requirements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_Other_Modifications__c</fullName>
        <label>Any Other Modifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Step</label>
        <picklist>
            <picklistValues>
                <fullName>Approved by Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Head of Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Head of Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Head of Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Head of Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined by Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Base_or_Upgrade__c</fullName>
        <label>Base or Upgrade</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Already_holds_Client__c</fullName>
        <label>Broker Already holds Client?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Commision_OVC__c</fullName>
        <label>Broker Commision OVC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Commision_Type__c</fullName>
        <label>Broker Commision Type</label>
        <picklist>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OVC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broker_Commision__c</fullName>
        <label>Broker Commision Resident</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Broker_Number__c</fullName>
        <formula>Broker__r.Client_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Broker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <infoMessage>Please select a broker for this opportunity</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Broker)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changes_to_Renewal_Terms__c</fullName>
        <label>Changes to Renewal Terms</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_background__c</fullName>
        <label>Client background</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clone_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clone of</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_Launch_plans__c</fullName>
        <description>Confirmed Launch plans</description>
        <label>Launch plans</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_funding_model__c</fullName>
        <description>Confirmed funding model</description>
        <label>Funding Model/Level</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed_product_details__c</fullName>
        <label>Confirmed product details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Health_Fund_General_Insurer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Current Health Fund/General Insurer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Health Fund</value>
            </filterItems>
            <infoMessage>Please select a Health Fund for this opportunity</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discounting__c</fullName>
        <label>Discounting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Renewal_End_Date__c</fullName>
        <label>Effective Renewal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount__c</fullName>
        <label>Fixed $ Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forced_Tier__c</fullName>
        <label>Forced Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Forced Base Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Tier 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formal_proposal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal proposal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funded_to__c</fullName>
        <label>% Funded to</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Funding_SplitPay_Arrangement_Mods__c</fullName>
        <label>Funding &amp; SplitPay A. Modifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Further_information__c</fullName>
        <label>Further information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_renewal_information__c</fullName>
        <label>General renewal information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geographics__c</fullName>
        <label>Geographics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Group_Modifications__c</fullName>
        <label>Group Modifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_pays_GST__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Group pays GST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_pays_LHC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group pays LHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Growth_Prospects__c</fullName>
        <label>Growth Prospects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Health_Fund_Reinsurer__c</fullName>
        <label>Health Fund/General Insurer Infor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Join_Online__c</fullName>
        <label>Join Online</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Letter_of_Authority__c</fullName>
        <label>Letter of Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level_of_Funding__c</fullName>
        <label>Level of Funding</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSW_ACT_no__c</fullName>
        <label>NSW &amp; ACT no</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>No_of_Non_RHCA__c</fullName>
        <label>No of Non-RHCA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_RHCA__c</fullName>
        <label>No of RHCA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Resident__c</fullName>
        <label>No of Resident</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_employees_Family__c</fullName>
        <label>No of employees - Family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_employees_Single__c</fullName>
        <label>No of employees - Single</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_standard_Join_Online_Details__c</fullName>
        <label>Non-standard Join Online Details</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Northern_Territory__c</fullName>
        <label>Northern Territory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>OPP-{000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Result__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &apos;Closed Won&apos;), &quot;Win&quot;, IF(ISPICKVAL(StageName, &apos;Closed Unsuccessful&apos;), &quot;Unsuccessful&quot;, IF(ISPICKVAL(StageName, &apos;Closed/Declined&apos;), &quot;Decline&quot;, &quot;Pending&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Result</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_summary__c</fullName>
        <label>Opportunity summary</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Health_Plan__c</fullName>
        <label>Previous Health Plan</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Modifications__c</fullName>
        <label>Product Modifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Non-standard Products</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Funding_Model__c</fullName>
        <label>Proposed Funding Model</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queensland__c</fullName>
        <label>Queensland</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_Authorisation_Comments__c</fullName>
        <description>Long text field to capture commentary of renewal by Commercial</description>
        <label>Renewal Authorisation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <inlineHelpText>This field is automatically calculated based on the start date + renewal months</inlineHelpText>
        <label>Effective Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Months__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Renewal Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms_Accepted__c</fullName>
        <label>Renewal Terms Accepted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Terms_Due__c</fullName>
        <description>Date terms due to be presented to client</description>
        <label>Renewal Terms Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <label>Renewal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Letter only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_of_Existing_arrangement__c</fullName>
        <label>Renewal of Existing arrangement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resident_status__c</fullName>
        <label>Resident status</label>
        <picklist>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>overseas visitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident &amp; overseas visitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result_Comments__c</fullName>
        <label>Result Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section_Details__c</fullName>
        <label>Section Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Section_Modifications__c</fullName>
        <label>Section Modifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Model__c</fullName>
        <label>Service Delivery Model</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Delivery_Model_details__c</fullName>
        <label>Service Delivery Model - details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Single_or_Family_Funded__c</fullName>
        <label>Single or Family Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single and Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>South_Australia__c</fullName>
        <label>South Australia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Special_arrangements__c</fullName>
        <label>Special arrangements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SplitPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SplitPay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>For won opportunity, start date</description>
        <inlineHelpText>For won opportunity, start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_based_employee_numbers_available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>State based employee numbers available for SplitPay?</description>
        <inlineHelpText>State based employee numbers available for SplitPay?</inlineHelpText>
        <label>State based employee numbers available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strength__c</fullName>
        <label>Strength</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Supporting_Business__c</fullName>
        <label>Supporting Business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tasmania__c</fullName>
        <label>Tasmania</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_Funded_to__c</fullName>
        <label>Tier Funded to</label>
        <picklist>
            <picklistValues>
                <fullName>Base Tier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Nominated Tier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Rates__c</fullName>
        <label>Type of Rates</label>
        <picklist>
            <picklistValues>
                <fullName>Blended rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State by state</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_non_resident__c</fullName>
        <label>Type of non-resident</label>
        <picklist>
            <controllingField>Resident_status__c</controllingField>
            <picklistValues>
                <fullName>RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHCA and non-RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_overseas_visitor__c</fullName>
        <label>Type of overseas visitor</label>
        <picklist>
            <picklistValues>
                <fullName>RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHCA and non-RHCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Victoria__c</fullName>
        <label>Victoria</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wellness_Solution__c</fullName>
        <label>Wellness Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes – Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Non-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wellness_Solution_details__c</fullName>
        <label>Wellness Solution details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Western_Australia__c</fullName>
        <label>Western Australia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Client_Maintenance</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Maintenance</value>
        </filters>
        <label>Client Maintenance</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Client_Maintenance</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Maintenance</value>
        </filters>
        <label>My Client Maintenance</label>
    </listViews>
    <listViews>
        <fullName>My_opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Opportunity</value>
        </filters>
        <label>My opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_renewals</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Manager__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Renewal</value>
        </filters>
        <label>My renewals</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Client_Maintenance</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Client_Maintenance</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Open Client Maintenance</label>
    </listViews>
    <listViews>
        <fullName>Open_opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>lessThan</operation>
            <value>100</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.PROBABILITY</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Open opportunities</label>
    </listViews>
</CustomObject>